--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,48 @@
 <html>
   <head>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
       body {
+        font-family: "Poppins";
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         text-rendering: optimizeLegibility;
         margin: 0;
-        background: #94a3b8;
+        background-image: url('/img/techxvison-bg.png');
+        background-size: cover;
       }
 
       input::placeholder {
         color: #94a3b8;
       }
-
       canvas {
-        width: 1024px;
-        height: 576px;
-        background-image: url('/img/webb-dark.png');
+        font-family: 'Poppins';
+        width: 1300px;
+        height: 700px;
+        border: 5px solid #ff0f57;
+        border-radius: 12px;
+        background-image: url('/img/game-bg.png');
+        background-size: cover;
       }
+
     </style>
   </head>
   <body style="display: flex; align-items: center; justify-content: center">
     <div>
       <div
         style="
+          margin: 12px;
           position: absolute;
           color: white;
           padding: 8px;
           font-family: sans-serif;
           font-size: 14px;
           user-select: none;
-          background: rgba(0, 0, 0, 0.5);
+          border-radius: 5px;
+          background: rgba(255, 17, 76, 0.5);
         "
       >
-        <div style="margin-bottom: 8px">Leaderboard</div>
+        <div style="margin-bottom: 2px;">Leaderboard</div>
         <div id="playerLabels"></div>
       </div>
       <canvas></canvas>
