--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         height: 700px;
         border: 5px solid #ff0f57;
         border-radius: 12px;
+        filter: brightness(-20);
         background-image: url('/img/game-bg.png');
         background-size: cover;
       }
